# jkem

./: .gitignore  .gitmodules  Cargo.toml  report.md
.github/workflows/: rustdoc.yml
benchmark/: Cargo.toml  build.rs  plot_criterion_mlkem.py
benchmark/src/: bench_mlkem_native_config.h  lib.rs  main.rs  mlkem_naive.rs  mlkem_native.rs  mlkem_native_wrapper.c
examples/: dudect_mlkem.rs
src/: crypto.rs  error.rs  fo.rs  lib.rs  params.rs  pke.rs  sample.rs  serialize.rs
src/math/: mod.rs  ntt.rs  ring.rs
src/mlkem/: control.rs  internal.rs  kpke.rs  mod.rs  params.rs  pke512.rs  serialize.rs
src/pke/: mod.rs
src/sample/: crypto.rs  mod.rs
src/security/: crypto.rs  mod.rs  sample.rs  wipe.rs
src/traits/: fo.rs  mod.rs  pke.rs
tests/: ml_kem_512_kat.rs  ml_kem_kat.rs
